@@ -2,7 +2,6 @@ apply plugin: "java"
 
 version '1.0'
 
-
 targetCompatibility = 8
 sourceCompatibility = 14
 
@@ -31,6 +30,10 @@ allprojects{
     tasks.withType(JavaCompile){
         if(JavaVersion.current() != JavaVersion.VERSION_1_8){
             options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+        }
+        
+        doFirst{
+            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
         }
     }
 }
